# fkbro-bot

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml
src/: bianceapi.rs  blockchairapi.rs  bot.rs  framework.rs  main.rs  render.rs
templates/: addr.tera  fee.tera  footer.tera  p.tera
