[package]
name = "fkbro-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
telegram-bot =  { git = "https://github.com/telegram-rs/telegram-bot.git", rev = "65ad5cfd578e9a1260ce6daac714eb2153c0bec7" }
clap = {version = "4", features = ["derive"]}
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"