[package]
name = "fkbro-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
teloxide = { version = "0.11", features = ["macros"] }
clap = {version = "4", features = ["derive"]}
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tera = "1.17"